working on element content overflowing issues

--- a/src/components/skillsAside.module.css
+++ b/src/components/skillsAside.module.css
@@ -4,7 +4,7 @@
 
 }
 
-aside {
+div {
   grid-column: 1;
   grid-row: 2;
   // background-color: #F0F0F2;
@@ -21,7 +21,9 @@ h5 {
 }
 
 .skills {
+  display: flex;
+  flex-direction: row;
   padding-left: 40px;
   text-align: left;
-  font-size: 20px;
+  font-size: 16px;
 }
